<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.remal.portfolio</groupId>
    <artifactId>portfolio-analyzer</artifactId>
    <version>0.1.13</version>

    <licenses>
        <license>
            <url>BSD (2-clause) licensed</url>
        </license>
        <license>
            <url>Copyright (c) 2020-2022, Remal Software</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Arnold Somogyi</name>
            <email>arnold.somogyi@gmail.com</email>
            <url>https://vilagszam.blogspot.com</url>
            <timezone>GMT+1</timezone>
            <roles>
                <role>project owner</role>
                <role>contributor</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <json.simple.version>1.1.1</json.simple.version>
        <logback.classic.version>1.4.0</logback.classic.version>
        <lombok.version>1.18.24</lombok.version>
        <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
        <maven.compiler.plugin.version>3.10.0</maven.compiler.plugin.version>
        <picocli.version>4.6.3</picocli.version>
        <poi.version>5.2.2</poi.version>
        <yahoo-finance-api.version>3.17.0</yahoo-finance-api.version>
    </properties>

    <dependencies>
        <!-- auto-generating Java methods -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- json processor -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${json.simple.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- command line interface -->
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>${picocli.version}</version>
        </dependency>
        <!-- logging framework -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.classic.version}</version>
        </dependency>
        <!-- this library makes it easy to communicate with
             the Yahoo Finance API -->
        <dependency>
            <groupId>com.yahoofinance-api</groupId>
            <artifactId>YahooFinanceAPI</artifactId>
            <version>${yahoo-finance-api.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- builds an executable JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.assembly.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <appendAssemblyId>false</appendAssemblyId>
                            <archive>
                                <manifestEntries>
                                    <Application-Version>${project.version}</Application-Version>
                                    <Created-By>arnold.somogyi@gmail.com</Created-By>
                                    <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
                                </manifestEntries>
                                <manifest>
                                    <mainClass>com.remal.portfolio.Main</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
